deploy: 8154f351cce3b57a98e3a2c666d96a65bfa22f96

--- a/404.html
+++ b/404.html
@@ -101,7 +101,7 @@
   <nav id="navbar" class="navbar fixed-top  navbar-expand-lg navbar-dark scrolling-navbar">
   <div class="container">
     <a class="navbar-brand" href="/">
-      <strong>ZiJun Yan</strong>
+      <strong>Lei Qi</strong>
     </a>
 
     <button id="navbar-toggler-btn" class="navbar-toggler" type="button" data-toggle="collapse"
@@ -272,7 +272,7 @@
     <div class="footer-inner">
   
     <div class="footer-content">
-       <a href="https://github.com/YZJenny" target="_blank" rel="nofollow noopener"><span>ZiJun Yan</span></a> <i class="iconfont icon-love"></i> <a href="https://github.com/leiqichn" target="_blank" rel="nofollow noopener"><span>Lei Qi</span></a> 
+       <a href="https://github.com/YZJenny" target="_blank" rel="nofollow noopener"><span>Lei Qi</span></a> <i class="iconfont icon-love"></i> <a href="https://github.com/leiqichn" target="_blank" rel="nofollow noopener"><span>Lei Qi</span></a> 
     </div>
   
   
