--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
   <header>
     
 
-<div class="header-inner" style="height: 90vh;">
+<div class="header-inner" style="height: 80vh;">
   <nav id="navbar" class="navbar fixed-top  navbar-expand-lg navbar-dark scrolling-navbar">
   <div class="container">
     <a class="navbar-brand" href="/">
@@ -457,7 +457,7 @@
     <div class="footer-inner">
   
     <div class="footer-content">
-       <a href="https://github.com/" target="_blank" rel="nofollow noopener"><span>github</span></a> <i class="iconfont icon-love"></i> <a href="https://github.com/leiqichn" target="_blank" rel="nofollow noopener"><span>Lei Qi</span></a> 
+       <a href="https://github.com/" target="_blank" rel="nofollow noopener"><span>Copyright ©Lei Qi 2022-2023. All right reserved. /span></a> #<i class="iconfont icon-love"></i> #<a href="https://github.com/leiqichn" target="_blank" rel="nofollow noopener"><span>Lei #Qi</span></a> 
     </div>
   
   
