--- a/404.html
+++ b/404.html
@@ -284,7 +284,7 @@
     <div class="footer-inner">
   
     <div class="footer-content">
-       <a href="https://github.com/" target="_blank" rel="nofollow noopener"><span>Copyright ©Lei Qi 2022-2023. All right reserved. /span></a> #<i class="iconfont icon-love"></i> #<a href="https://github.com/leiqichn" target="_blank" rel="nofollow noopener"><span>Lei #Qi</span></a> 
+       <a href="https://github.com/" target="_blank" rel="nofollow noopener"><span>Copyright ©Lei Qi 2022-2023. All right reserved.</a>
     </div>
   
   
